<resources>
    <string name="app_name">Temperature Cricket</string>
    <string name="tip">Did you know can determent the temperature
        \noutside by counting the number of chirps the
        \ncricket makes? Just count the number of chirps
        \none makes in 25 seconds and place that number
        \nin the box below:</string>
    <string name="btnCalculate">CALCULATE TEMPERATURE</string>
    <string name="text">Text</string>
    <string name="Image">thermometer_image</string>
    <string name="numberOfChirps">Enter number of chirps</string>
</resources>