<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="188dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/Image"
        app:srcCompat="@mipmap/thermometer" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"
        android:text="@string/tip"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/chirpNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/numberOfChirps"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:typeface="serif" />

    <Button
        android:id="@+id/btnCal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/btnCalculate" />

    <TextView
        android:id="@+id/tvRes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="35dp"
        android:gravity="center_horizontal"
        android:text="@string/text"
        android:textAlignment="gravity"
        android:textStyle="bold" />

</LinearLayout>